[package]
name = "max78000-pac"
version = "0.4.0"
authors = ["SIGPwny <hello@sigpwny.com>", "Minh Duong <hello@whitehoodhacker.net>"]
edition = "2021"
license = "Apache-2.0"
description = "A Peripheral Access Crate for the MAX78000 microcontroller"
repository = "https://github.com/sigpwny/max78000-pac"
readme = "README.md"
keywords = ["max78000", "pac", "arm", "cortex-m", "svd2rust"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["critical-section", "rt"]
targets = ["thumbv7em-none-eabi", "thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
critical-section = { version = "1.2", optional = true }
vcell = "0.1.3"

[features]
default = ["critical-section", "rt"]
critical-section = ["dep:critical-section"]
rt = ["dep:cortex-m-rt", "cortex-m-rt/device"]